2024年8月29日わかんないからもう終わり

--- a/article/00001.html
+++ b/article/00001.html
@@ -16,16 +16,16 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c&display=swap" rel="stylesheet"><!-- google fontsの指定(3つ) -->
-        <link rel="stylesheet" href="/css/def.css">
+        <link rel="stylesheet" href="../css/def.css">
 
     <!-- タブに表示されるアイコン -->
-        <link rel="icon" type="image/png" href="images/logo.png">
+        <link rel="icon" type="image/png" href="/images/logo.png">
     </head>
 
     <body>
         <header class="page-header wrapper">
             <div class="logoo">
-                <a href="notfound.html"><img src="images/logo.png" alt="サイトのロゴ" class="logo"></a>
+                <a href="notfound.html"><img src="/images/logo.png" alt="サイトのロゴ" class="logo"></a>
                 <a href="notfound.html"><span class="yusei-magic-regular">数学の裏技</span></a>
             </div>
             <nav>
@@ -36,6 +36,11 @@
                 </ul>
             </nav>
         </header>
-        not found
+
+
+        
+        <footer>
+            <div class="wrapper"><p><small>&copy; 2024 masat410</small></p></div>
+        </footer>
     </body>
 </html>
