--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     
     <!-- CSS -->
         <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css"><!-- ress css -->
+
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Yusei+Magic&display=swap" rel="stylesheet">
+
+
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c&display=swap" rel="stylesheet"><!-- google fontsの指定(3つ) -->
@@ -17,9 +23,11 @@
     </head>
 
     <body>
-        <header class="page-header">
-            <a href="index.html"><img src="images/logo.png" alt="サイトのロゴ" class="logo"></a>
-            <span class="logo">数学の裏技</span>
+        <header class="page-header wrapper">
+            <div class="logoo">
+                <a href="notfound.html"><img src="images/logo.png" alt="サイトのロゴ" class="logo"></a>
+                <a href="notfound.html"><span class="yusei-magic-regular">数学の裏技</span></a>
+            </div>
             <nav>
                 <ul class="main-nav">
                     <li><a href="notfound.html">おすすめ一覧</a></li>
