2024年9月5日難しいので今日は終わり

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ja">
     <head>
         <meta charset="utf-8">
-        <title>数学の裏技.(まとめサイト)</title>
+        <title>数学の裏技</title>
         <meta name="description" content="主に中学の範囲で使える数学の裏技を紹介します！！">
     
     <!-- CSS -->
