2024年9月11日だれかとやりたい

--- a/article/00001.html
+++ b/article/00001.html
@@ -105,6 +105,9 @@
                     コンピューターでも使うのが難しくなります。手計算だと五～六元になると限界です。
                     (そんなに大きな連立方程式ならガウス消去法とかを使うと思います。)
                     今回はさらっと簡単に仕組みを解説します。
+
+                    <div style="border: 1px #ffd9ef solid;margin: 20px;"></div>
+                    まず、
                 </div>
             </article>
         </div>
