--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c&display=swap" rel="stylesheet"><!-- google fontsの指定(3つ) -->
-        <link rel="stylesheet" href="/css/def.css">
+        <link rel="stylesheet" href="css/def.css">
 
     <!-- タブに表示されるアイコン -->
         <link rel="icon" type="image/png" href="images/logo.png">
