2024年12月30日昨日は最悪な日だった

--- a/article/00001.html
+++ b/article/00001.html
@@ -50,7 +50,7 @@
 
                 <div class="article">
                     　この公式は、n元連立一次方程式の解を計算できる公式です。この公式は、文字が多い(式が多い)ほど計算量が多くなりますが、
-                    中学二年生で習う二元連立方程式では暗算や手計算でも短時間で解を求めることができます。そんなクラメルの公式を二元連立一次
+                    中学二年生で習う二元連立方程式程度では暗算や手計算でも短時間で解を求めることができます。そんなクラメルの公式を二元連立一次
                     方程式用にして"わかりやすくすると"このようになります。
                     
                     <div style="max-width: 50%;" class="susiki">
@@ -134,6 +134,7 @@
                     <br><br>
                     実際は係数行列の行列式を求める手順で正則行列であるかを判断している。
                     <br><br>
+                    この続きはいつか書く(2024年12月30日)
                 </div>
             </article>
         </div>
